src/tests/snapshots/hebi__tests__modules__load_fn_with_module_vars.snap
---
source: src/tests/modules.rs
expression: snapshot
---
# Modules:
# module:test
value := 100
fn set(v):
  value = v
fn get():
  return value



# Input:
from test import get, set

print get()
set(0)
print get()


# Result (success):
none

# Stdout:
100
0


