src/tests/snapshots/hebi__tests__modules__multi_module_nesting.snap
---
source: src/tests/modules.rs
expression: snapshot
---
# Modules:
# module:nested
bar := 100


# module:test
from nested import bar

foo := bar



# Input:
from test import foo

print foo


# Result (success):
none

# Stdout:
100


